# DomainToolBelt

./: .gitignore  PACK_SPEC.md  README.md  pyproject.toml  v0_3.txt
domaintoolbelt/: __init__.py  cli.py
domaintoolbelt/core/: __init__.py  checkpoints.py  dependency_graph.py  events.py  executor.py  guardrails.py  kernel.py  planner.py  prompt_loader.py  synthesizer.py  tool_selector.py  types.py  validator.py
domaintoolbelt/domain_packs/: __init__.py  base.py  registry.py
domaintoolbelt/domain_packs/_template_pack/: README.md  __init__.py  config.py  mcp_tools.py  truth_policy.py  validators.py
domaintoolbelt/domain_packs/bible_pack/: __init__.py  config.py  mcp_tools.py  truth_policy.py  validators.py
domaintoolbelt/domain_packs/legal_pack/: __init__.py  config.py  mcp_tools.py  truth_policy.py  validators.py
domaintoolbelt/domain_packs/philosophy_pack/: __init__.py  config.py  mcp_tools.py  truth_policy.py  validators.py
domaintoolbelt/llm/: __init__.py  agentmake_adapter.py  openai_adapter.py  provider.py
domaintoolbelt/mcp/: __init__.py  cli.py  registry.py  server.py
domaintoolbelt/observability/: __init__.py  logger.py
domaintoolbelt/rag/: __init__.py  citations.py  grounding.py  memory.py  retriever.py
domaintoolbelt/ui/: __init__.py
domaintoolbelt/ui/tui/: __init__.py  app.py  live_app.py  partner_review.py
tests/: test_events.py  test_executor.py  test_grounding.py  test_kernel.py  test_mcp_server.py  test_prompt_loader.py  test_registry.py  test_resume.py  test_structured_outputs.py  test_tool_selector.py  test_tracing.py
(+24 files in other folders)
